force-app/main/default/objects/Requests__c/Requests__c.object-meta.xml
<CustomObject>
    <description>Training requests.</description>
    <label>Request</label>
    <nameField>
        <displayFormat>TCR-RQ-{0000}</displayFormat>
        <label>Requests ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>