force-app/main/default/objects/Requests__c/fields/L_TC_Approved__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>