force-app/main/default/objects/Requests__c/fields/L_TC_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>