force-app/main/default/objects/Requests__c/fields/L_TC_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Attendee_Name__c</fullName>
    <defaultValue>$User.FirstName +&quot; &quot;+  $User.LastName</defaultValue>
    <label>Attendee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>