force-app/main/default/objects/Requests__c/fields/L_TC_Comments__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Comments__c</fullName>
    <inlineHelpText>Indicate your preferences like :
Preferred campus 
Department (if requested for a training) 
Time frame in which training is needed
Others</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>