force-app/main/default/objects/Requests__c/fields/L_TC_Requested_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Requested_Training_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>