force-app/main/default/objects/Requests__c/fields/L_TC_Requested_Training_Time__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Requested_Training_Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>