force-app/main/default/objects/Requests__c/fields/L_TC_Skill__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>