force-app/main/default/objects/Requests__c/fields/L_TC_Subject__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>