force-app/main/default/objects/Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Training__c</columns>
    <columns>L_TC_Approved__c</columns>
    <columns>L_TC_Approved_Date__c</columns>
    <columns>L_TC_Approved_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>