force-app/main/default/objects/Requests__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Training__c</columns>
    <columns>L_TC_Approved__c</columns>
    <columns>L_TC_Approved_By__c</columns>
    <columns>L_TC_Approved_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests</label>
</ListView>